@@ -3,6 +3,7 @@ SPARQLWrapper's changelog:
 201X-XX-XX  1.8.2   - Fixed bug (#100)
                     - Updated doc
                     - Added Unauthorized exception in SPARQLWrapperExceptions
+                    - Added support for custom HTTP headers (#52)
 
 
 2018-02-25  1.8.1   - Update classifiers (Python 3.6)
